# design-patterns-cpp

./: LICENSE  README.md
Adapter_pattern/: ReadMe.md
Adapter_pattern/adapter/: CMakeLists.txt  class_adapter.h  main.cpp  object_adapter.h
Adapter_pattern/facade/: CMakeLists.txt  main.cpp  subsystem.h
Command_pattern/: CMakeLists.txt  README.md  command.h  device.h  main.cpp  remote.h
Compound_pattern/: CMakeLists.txt  ReadMe.md  duck_simulator.h  main.cpp
Compound_pattern/counter/: quack_counter.h
Compound_pattern/duck_factory/: abstract_fact.hpp  count_duck_fact.h  duck_fact.h
Compound_pattern/ducks/: duck-inl.h  duckcall.h  goose.h  goose_adapter.h  mallard.h  observable.h  redhead.h  rubber.h
Compound_pattern/flock/: flock.h
Compound_pattern/interface/: observer.h  quackable.h
Decorator_pattern/: CMakeLists.txt  README.md  beverage.hpp  concrete_beverage.h  condiment_decorator.hpp  starbuzz.cpp
Factory_pattern/: README.md
Iterator_pattern/: CMakeLists.txt  ReadMe.md  concrete_iterator.hpp  concrete_menu.hpp  interface.hpp  iterator.hpp  main.cpp  menu.hpp
Observer_pattern/: CMakeLists.txt  ReadMe.md  cur_cond_display.h  display.h  observer.h  stat_display.h  subject.h  weather_data.h  weather_station.cpp
Proxy_pattern/: CMakeLists.txt  Readme.md  main.cpp  proxy.h  subject.h
Singleton_pattern/: CMakeLists.txt  README.md  main.cpp  unique_instance.hpp
State_pattern/: CMakeLists.txt  ReadMe.md  gumball_machine.hpp  main.cpp
Template_Method_pattern/: CMakeLists.txt  ReadMe.md  beverage.hpp  coffee.hpp  main.cpp  tea.hpp
(+28 files in other folders)
